--- a/style.css
+++ b/style.css
@@ -152,35 +152,105 @@ a {
 
 /* Contact Us */
 .contact-us {
-  display: flex;
-  flex-direction: column;
-  font-size: var(--font-medium);
-  padding: 10px 100px;
-  background-color: var(--blue-color);
+  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  font-family: Roboto;
 }
 
-.contact-us h3 {
-  color: var(--white-color);
-  font-size: var(--font-large);
-  text-align: center;
-  padding: 12px;
-}
-
-.contact-us textarea {
-  padding: var(--padding);
-  color: var(--blue-color);
-  height: 150px;
-}
-
-.contact-us button {
-  color: var(--grey-dark-color);
-  background-color: var(--blue-color);
-  border-radius: 5%;
-  padding: 10px;
+#contact-us {
+  height: 100vh;
   width: 100%;
+  background-color: var(--blue-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
+.container {
+  width: 90%;
+  max-width: 500px;
+  margin-top: 0 auto;
+  padding: 20px;
+  box-shadow: 0px 0px 20px #00000010;
+  background-color: white;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  width: 100%;
+  margin-top: 20px;
+  font-size: 20px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 5px;
+  font-size: 18px;
+  border: 1px solid var(--grey-dark-color);
+  margin-top: 5px;
+}
+
+textarea {
+  resize: vertical;
+}
+
+button[type="submit"] {
+  width: 100%;
+  border: none;
+  outline: none;
+  padding: 20px;
+  font-size: 24px;
+  border-radius: 8px;
+  font-family: "roboto";
+  color: var(--blue-color);
+  cursor: pointer;
+  margin-top: 10px;
+  transition: 0.3s ease background-color;
+}
+
+button[type="submit"]:hover {
+  background-color: rgb(214, 226, 236);
+}
+
+#status {
+  width: 90%;
+  max-width: 500px;
+  text-align: center;
+  padding: 10px;
+  margin: 0 auto;
+  border-radius: 8px;
+}
+
+#status.success {
+  background-color: #aacdbe;
+  animation: status 4s ease forwards;
+}
+
+#status.error {
+  background-color: #fa4659;
+  color: white;
+  animation: status 4s ease forwards;
+}
+
+@keyframes status {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  90% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: none;
+  }
+}
 /* Footer */
 footer {
   text-align: center;
