--- a/style.css
+++ b/style.css
@@ -3,20 +3,19 @@
   --white-color: #fff;
   --black-color: #140a00;
   --blue-color: #173758;
-  --red-color: #ff0000;
   --orange-color: #b58435;
   --grey-dark-color: #909090;
   --grey-light-color: #e0e0e0;
 
   /* Size */
-  --padding: 12px;
-  --avatar-size: 36px;
+  --padding: 0.75em;
+  --avatar-size: 1.125em;
 
   /* Font Size */
-  --font-large: 24px;
-  --font-medium: 20px;
-  --font-small: 16px;
-  --font-micro: 12px;
+  --font-large: 2rem;
+  --font-medium: 1.5rem;
+  --font-small: 1rem;
+  --font-micro: 0.5rem;
 }
 
 * {
@@ -40,7 +39,7 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 12px;
+  padding: var(--padding);
   background-color: var(--blue-color);
   color: var(--white-color);
   font-family: "oswald";
@@ -48,7 +47,7 @@ a {
 }
 
 .navbar-logo {
-  font-size: 24px;
+  font-size: var(--font-medium);
   color: var(--white-color);
   text-decoration: none;
 }
@@ -62,6 +61,7 @@ a {
   display: flex;
   list-style: none;
   padding-left: 0;
+  font-size: var(--font-small);
 }
 
 .navbar-menu li {
@@ -77,7 +77,6 @@ a {
   list-style: none;
   color: var(--white-color);
   display: flex;
-  padding-left: 0;
 }
 
 .navbar-icons i {
@@ -87,8 +86,8 @@ a {
 .navbar-toggleBtn {
   display: none;
   position: absolute;
-  right: 32px;
-  font-size: 24px;
+  right: 2rem;
+  font-size: var(--font-medium);
   color: var(--orange-color);
 }
 
@@ -114,46 +113,42 @@ a {
 /* About Us */
 .about-us {
   display: flex;
-  padding: 100px;
+  padding: 6.25rem;
+  color: var(--blue-color);
 }
 
 .about-us .about-us-img {
-  width: 30%;
-  height: 100%;
-  border-radius: 30px;
+  width: 20%;
+  border-radius: 45px;
   padding: var(--padding);
 }
 
 .about-us .about-us-text {
   display: flex;
   flex-direction: column;
-  padding-left: 50px;
+  padding-left: 3.125rem;
 }
 
 .about-us .about-us-text h3 {
-  font-size: 30px;
-  padding-top: var(--padding);
-  color: var(--blue-color);
+  font-size: var(--font-large);
   font-family: "oswald";
-  padding-bottom: 20px;
+  padding-bottom: var(--padding);
   letter-spacing: 2px;
 }
 
 .about-us .about-us-text p {
   font-size: var(--font-medium);
-  padding: 12px, 0px, 12px, 100px;
-  color: var(--blue-color);
+  padding: 0.75rem 0px;
 }
 
 .about-us .about-us-text button {
   display: flex;
-  align-items: center;
   justify-content: center;
   color: var(--white-color);
   background-color: var(--blue-color);
   border-radius: 8px;
-  padding: 10px;
-  margin: 15px;
+  padding: var(--padding);
+  margin: var(--padding);
   margin-left: 0;
   width: 10%;
   border: none;
@@ -165,52 +160,49 @@ a {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Roboto;
 }
 
 #contact-us {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: var(--blue-color);
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
 }
 
 #contact-us h1 {
-  margin-bottom: 60px;
+  margin: 1rem;
   color: var(--white-color);
   font-family: "oswald";
   letter-spacing: 2px;
-  font-size: 30px;
+  font-size: var(--font-large);
 }
 
 .container {
-  width: 90%;
+  width: 100%;
   max-width: 500px;
-  margin-top: 0 auto;
-  padding: 20px;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: var(--padding);
   box-shadow: 0px 0px 20px #00000010;
   background-color: white;
   border-radius: 8px;
-  margin-bottom: 20px;
 }
 
 .form-group {
   width: 100%;
-  margin-top: 20px;
-  font-size: 20px;
+  margin-top: 1rem;
+  font-size: var(--font-small);
 }
 
 .form-group input,
 .form-group textarea {
   width: 100%;
-  padding: 5px;
-  font-size: 18px;
+  padding: 0.3rem;
+  font-size: var(--font-small);
   border: 1px solid var(--grey-dark-color);
-  margin-top: 5px;
+  margin-top: 0.3rem;
 }
 
 textarea {
@@ -221,13 +213,12 @@ button[type="submit"] {
   width: 100%;
   border: none;
   outline: none;
-  padding: 20px;
-  font-size: 24px;
+  padding: var(--padding);
+  font-size: var(--font-large);
   border-radius: 8px;
-  font-family: "roboto";
   color: var(--blue-color);
   cursor: pointer;
-  margin-top: 10px;
+  margin-top: 0.625rem;
   transition: 0.3s ease background-color;
 }
 
@@ -281,7 +272,7 @@ footer {
 
 footer p {
   color: var(--blue-color);
-  font-size: var(--font-micro);
+  font-size: var(--font-small);
 }
 
 @media screen and (max-width: 768px) {
@@ -333,12 +324,11 @@ footer p {
   .main-feature .about-us {
     display: flex;
     flex-direction: column;
-    padding: 3.125rem;
-    padding-top: 6.25rem;
+    align-items: center;
   }
 
   .main-feature .about-us-img {
-    width: 100%;
+    width: 80%;
     border-radius: 15%;
   }
 
@@ -346,28 +336,13 @@ footer p {
     padding-left: 0.625rem;
   }
 
+  .main-feature .about-us-text h3 {
+    padding-top: 2rem;
+  }
   .main-feature .about-us-text button {
     display: block;
     border: none;
     padding: calc(var(--padding) / 2);
     width: 15%;
-  }
-
-  /* Contact Us */
-  .contact-us {
-    margin: 0;
-    padding: 1.25rem 1.875rem;
-  }
-
-  .main-feature .contact-us input {
-    margin-top: 2.5%;
-  }
-
-  .contact-us button {
-    padding: calc(var(--padding) / 2);
-    width: 100%;
-    margin-top: 2.5%;
-    border: 0.0625rem solid var(--orange-color);
-    border-radius: 0%;
   }
 }
